Implementing sleep nodes.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,128 @@ bin*
 Debug
 
 node/node_modules/
+built/ALL_BUILD.vcxproj
+built/ALL_BUILD.vcxproj.filters
+built/CMakeCache.txt
+built/CMakeFiles/0a0c352fcbb3dfa853e50e9d14f2ba50/INSTALL_force.rule
+built/CMakeFiles/1047d0fe25446a0004d35c794f209d5c/INSTALL_force.rule
+built/CMakeFiles/1234293b5261a1b3d52875f11176a94b/INSTALL_force.rule
+built/CMakeFiles/1234293b5261a1b3d52875f11176a94b/run_protoc.rule
+built/CMakeFiles/166c814f327b01476d982083beec06b5/INSTALL_force.rule
+built/CMakeFiles/17960d94aa5cc467fc21fdd44e642c8f/INSTALL_force.rule
+built/CMakeFiles/17960d94aa5cc467fc21fdd44e642c8f/run_tests.rule
+built/CMakeFiles/3.0.0/CMakeCCompiler.cmake
+built/CMakeFiles/3.0.0/CMakeCXXCompiler.cmake
+built/CMakeFiles/3.0.0/CMakeDetermineCompilerABI_C.bin
+built/CMakeFiles/3.0.0/CMakeDetermineCompilerABI_CXX.bin
+built/CMakeFiles/3.0.0/CMakeRCCompiler.cmake
+built/CMakeFiles/3.0.0/CMakeSystem.cmake
+built/CMakeFiles/3.0.0/CompilerIdC/CMakeCCompilerId.c
+built/CMakeFiles/3.0.0/CompilerIdC/CompilerIdC.vcxproj
+built/CMakeFiles/3.0.0/CompilerIdCXX/CMakeCXXCompilerId.cpp
+built/CMakeFiles/3.0.0/CompilerIdCXX/CompilerIdCXX.vcxproj
+built/CMakeFiles/5283380642dad4fc21a6c871d3c67ce8/ALL_BUILD.rule
+built/CMakeFiles/5283380642dad4fc21a6c871d3c67ce8/INSTALL_force.rule
+built/CMakeFiles/5283380642dad4fc21a6c871d3c67ce8/ZERO_CHECK.rule
+built/CMakeFiles/5283380642dad4fc21a6c871d3c67ce8/generate.stamp.rule
+built/CMakeFiles/61c9d5e94adda16e7037971c4f8e3b89/INSTALL_force.rule
+built/CMakeFiles/7e516c65e4d0991b1b9959f0297ded61/inexor_service.pb.cc.rule
+built/CMakeFiles/8f1b9449bc6065141c24b1ad9398eb90/INSTALL_force.rule
+built/CMakeFiles/TargetDirectories.txt
+built/CMakeFiles/b1a38a3ba67456c98da6d294b4603bb0/INSTALL_force.rule
+built/CMakeFiles/b9d99fde461cfa4febddafc3734ba376/INSTALL_force.rule
+built/CMakeFiles/c9e27dbbb77ffe799b2a42b4c4bd232a/INSTALL_force.rule
+built/CMakeFiles/cmake.check_cache
+built/CMakeFiles/ef6dbdd369e9dba812159ad09ea60ee6/INSTALL_force.rule
+built/CMakeFiles/generate.stamp
+built/CMakeFiles/generate.stamp.depend
+built/CMakeFiles/generate.stamp.list
+built/INSTALL.vcxproj
+built/INSTALL.vcxproj.filters
+built/Inexor.sdf
+built/Inexor.sln
+built/ZERO_CHECK.vcxproj
+built/ZERO_CHECK.vcxproj.filters
+built/cmake_install.cmake
+built/inexor/CMakeFiles/generate.stamp
+built/inexor/CMakeFiles/generate.stamp.depend
+built/inexor/INSTALL.vcxproj
+built/inexor/INSTALL.vcxproj.filters
+built/inexor/client/CMakeFiles/generate.stamp
+built/inexor/client/CMakeFiles/generate.stamp.depend
+built/inexor/client/INSTALL.vcxproj
+built/inexor/client/INSTALL.vcxproj.filters
+built/inexor/client/cmake_install.cmake
+built/inexor/client/inexor.vcxproj
+built/inexor/client/inexor.vcxproj.filters
+built/inexor/cmake_install.cmake
+built/inexor/flowgraph/CMakeFiles/generate.stamp
+built/inexor/flowgraph/CMakeFiles/generate.stamp.depend
+built/inexor/flowgraph/INSTALL.vcxproj
+built/inexor/flowgraph/INSTALL.vcxproj.filters
+built/inexor/flowgraph/cmake_install.cmake
+built/inexor/flowgraph/module_flowgraph.vcxproj
+built/inexor/flowgraph/module_flowgraph.vcxproj.filters
+built/inexor/geom/CMakeFiles/generate.stamp
+built/inexor/geom/CMakeFiles/generate.stamp.depend
+built/inexor/geom/INSTALL.vcxproj
+built/inexor/geom/INSTALL.vcxproj.filters
+built/inexor/geom/cmake_install.cmake
+built/inexor/geom/module_geom.vcxproj
+built/inexor/geom/module_geom.vcxproj.filters
+built/inexor/libraries/CMakeFiles/generate.stamp
+built/inexor/libraries/CMakeFiles/generate.stamp.depend
+built/inexor/libraries/INSTALL.vcxproj
+built/inexor/libraries/INSTALL.vcxproj.filters
+built/inexor/libraries/cmake_install.cmake
+built/inexor/libraries/module_muparser.vcxproj
+built/inexor/libraries/module_muparser.vcxproj.filters
+built/inexor/net/CMakeFiles/generate.stamp
+built/inexor/net/CMakeFiles/generate.stamp.depend
+built/inexor/net/INSTALL.vcxproj
+built/inexor/net/INSTALL.vcxproj.filters
+built/inexor/net/cmake_install.cmake
+built/inexor/net/module_net.vcxproj
+built/inexor/net/module_net.vcxproj.filters
+built/inexor/rpc/CMakeFiles/generate.stamp
+built/inexor/rpc/CMakeFiles/generate.stamp.depend
+built/inexor/rpc/INSTALL.vcxproj
+built/inexor/rpc/INSTALL.vcxproj.filters
+built/inexor/rpc/cmake_install.cmake
+built/inexor/rpc/inexor/rpc/inexor_service.pb.cc
+built/inexor/rpc/inexor/rpc/inexor_service.pb.h
+built/inexor/rpc/module_rpc.vcxproj
+built/inexor/rpc/module_rpc.vcxproj.filters
+built/inexor/rpc/run_protoc.vcxproj
+built/inexor/rpc/run_protoc.vcxproj.filters
+built/inexor/server/CMakeFiles/generate.stamp
+built/inexor/server/CMakeFiles/generate.stamp.depend
+built/inexor/server/INSTALL.vcxproj
+built/inexor/server/INSTALL.vcxproj.filters
+built/inexor/server/cmake_install.cmake
+built/inexor/server/server.vcxproj
+built/inexor/server/server.vcxproj.filters
+built/inexor/test/CMakeFiles/generate.stamp
+built/inexor/test/CMakeFiles/generate.stamp.depend
+built/inexor/test/INSTALL.vcxproj
+built/inexor/test/INSTALL.vcxproj.filters
+built/inexor/test/cmake_install.cmake
+built/inexor/test/run_tests.vcxproj
+built/inexor/test/run_tests.vcxproj.filters
+built/inexor/test/unit_tests.vcxproj
+built/inexor/test/unit_tests.vcxproj.filters
+built/inexor/ui/CMakeFiles/generate.stamp
+built/inexor/ui/CMakeFiles/generate.stamp.depend
+built/inexor/ui/INSTALL.vcxproj
+built/inexor/ui/INSTALL.vcxproj.filters
+built/inexor/ui/cmake_install.cmake
+built/inexor/ui/module_ui.vcxproj
+built/inexor/ui/module_ui.vcxproj.filters
+built/inexor/util/CMakeFiles/generate.stamp
+built/inexor/util/CMakeFiles/generate.stamp.depend
+built/inexor/util/INSTALL.vcxproj
+built/inexor/util/INSTALL.vcxproj.filters
+built/inexor/util/cmake_install.cmake
+built/inexor/util/module_util.vcxproj
+built/inexor/util/module_util.vcxproj.filters
+built/install_manifest.txt
