add persistent teams server variable

--- a/server-init.cfg
+++ b/server-init.cfg
@@ -58,8 +58,8 @@ updatemaster 1
 // maxdemosize 16
 
 // controls whether admin privs are necessary to pause a game
-// when 1 requires admin (default)
-// when 0 only requires master
+// when 1 requires admin
+// when 0 only requires master (default)
 // restrictpausegame 1
 
 // wether or not players with a custom map should be moved to spectator automatically
@@ -67,6 +67,11 @@ updatemaster 1
 // when 1 players with modified map will be moved to spectator
 // when 0 players with modified map are allowed to play
 spectatemodifiedmap 1
+
+// controls whether admin privs are necessary to set the teams to be persistent
+// when 1 requires admin
+// when 0 only requires master (default)
+// restrictpersistteams 1
 
 // whether or not to allow players to vote on maps not in the rotation
 // when 1 requires master
