--- a/inexor/CMakeLists.txt
+++ b/inexor/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(filesystem)
 add_subdirectory(net) # net module, asio lib
 add_subdirectory(rpc) # rpc module, protobuf lib
 add_subdirectory(ui)
+add_subdirectory(inexor_cef_subprocess)
 add_subdirectory(crashreporter)
 add_subdirectory(texture)
 
