--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ platform:
 
 # build Configuration, i.e. Debug, Release, etc.
 configuration:
-  - Debug
+ # - Debug
   - Release
 
 # scripts that are called at very beginning, before repo cloning
