--- a/inexor/util/CMakeLists.txt
+++ b/inexor/util/CMakeLists.txt
@@ -5,6 +5,7 @@ declare_module(util .)
 add_lib(util)
 config_boost_thread(module_util NOLINK)
 config_boost_random(module_util NOLINK)
+config_cxx11_abi(module_util NOLINK)
 
 function(config_util targ)
   message(STATUS "Configuring ${targ} with util")
@@ -16,4 +17,5 @@ function(config_util targ)
 
   config_boost_thread(${targ} ${NOLINK})
   config_boost_random(${targ} ${NOLINK})
+  config_cxx11_abi(${targ} ${NOLINK})
 endfunction()
