Use yargs for command line handling in the server application

--- a/node/package.json
+++ b/node/package.json
@@ -26,6 +26,7 @@
     "uuid": "^2.0.1",
     "node-dir": "^0.1.8",
     "promise": "^7.0.4",
+    "yargs": "^3.31.0",
     "restify": "^4.0.3",
 	"bunyan": "^1.5.1"
   },
