create filesystem module and replace json.cpp with rapidjson
including only mediadirs.cpp and .h (formerly shared/filesystem.h/cpp)

we will drop our own json lib in favor of rapidjson here

--- a/inexor/client/CMakeLists.txt
+++ b/inexor/client/CMakeLists.txt
@@ -73,3 +73,4 @@ config_rpc(${CLIENT_BINARY})
 config_util(${CLIENT_BINARY})
 config_ui(${CLIENT_BINARY})
 config_texture(${CLIENT_BINARY})
+config_filesystem(${CLIENT_BINARY})
