--- a/inexor/server/CMakeLists.txt
+++ b/inexor/server/CMakeLists.txt
@@ -25,3 +25,4 @@ config_net(${SERVER_BINARY})
 config_rpc(${SERVER_BINARY})
 config_util(${SERVER_BINARY})
 config_crashreporter(${SERVER_BINARY})
+config_filesystem(${SERVER_BINARY})
