Spectate players with modified map. This is related to #167

--- a/server-init.cfg
+++ b/server-init.cfg
@@ -62,6 +62,12 @@ updatemaster 1
 // when 0 only requires master
 // restrictpausegame 1
 
+// wether or not players with a custom map should be moved to spectator automatically
+// this requires that the server has access to maps to read the checksum
+// when 1 players with modified map will be moved to spectator
+// when 0 players with modified map are allowed to play
+spectatemodifiedmap 1
+
 // whether or not to allow players to vote on maps not in the rotation
 // when 1 requires master
 // when 2 requires admin
