Added, updated, sanitized and cleaned the master server.
you can now build a masterserver with our normal build system.

--- a/inexor/CMakeLists.txt
+++ b/inexor/CMakeLists.txt
@@ -23,4 +23,5 @@ add_subdirectory(crashreporter)
 # Actual targets
 opt_subdir(client on)
 opt_subdir(server on)
+opt_subdir(master on)
 opt_subdir(test   on)
