--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,23 @@ bin*
 
 Debug
 
-node/node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+
+# Dependency directories
+node/node_modules
+node/jspm_packages
+
+# Optional npm cache directory
+node/.npm
+
+# Optional REPL history
+.node_repl_history
+
