It's going down. Start to migrate to restify and use bower + bowcat to deliver files within the browser (requireJS might be better)

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ pids
 
 # Dependency directories
 node/node_modules
+node/assets/bower_packages
+node/assets/build
 node/jspm_packages
 
 # Optional npm cache directory
