--- a/node/package.json
+++ b/node/package.json
@@ -4,8 +4,7 @@
   "description": "Scripting in node.js for Inexor",
   "main": "index.js",
   "scripts": {
-    "install": "node node_modules/.bin/bower install",
-    "postinstall": "node node_modules/.bin/bowcat assets/ -o assets/build",
+    "postinstall": "node node_modules/.bin/bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +18,6 @@
   },
   "dependencies": {
     "async": "^1.5.2",
-    "bowcat": "0.0.5",
     "bower": "^1.7.7",
     "bunyan": "^1.7.0",
     "coffee-script": "^1.10.0",
