--- a/node/bower.json
+++ b/node/bower.json
@@ -20,8 +20,18 @@
   "dependencies": {
     "jquery": "^2.2.1",
     "bootstrap": "^3.3.6",
-    "AngularJS": "angular-latest#^1.5.0",
-    "jq-console": "replit/jq-console#^2.13.2",
-    "font-awesome": "fontawesome#^4.5.0"
+    "font-awesome": "fontawesome#^4.5.0",
+    "requirejs": "^2.1.22",
+    "angular-hotkeys": "angular-cfp-hotkeys#^1.7.0",
+    "angular-ui-router": "^0.2.18",
+    "jquery-migrate": "^1.3.0",
+    "domReady": "requirejs-domready#^2.0.1",
+    "angular": "^1.5.0",
+    "angular-resource": "^1.5.0",
+    "angular-sanitize": "^1.5.0",
+    "angular-cookies": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "jq-console": "^2.13.2",
+    "angular-bootstrap": "^1.2.2"
   }
 }
