--- a/node/package.json
+++ b/node/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "bower": "^1.7.7",
+    "bower-requirejs": "^1.2.0",
     "bunyan": "^1.7.0",
     "coffee-script": "^1.10.0",
     "lodash": "^4.5.1",
