create filesystem module and replace json.cpp with rapidjson
including only mediadirs.cpp and .h (formerly shared/filesystem.h/cpp)

we will drop our own json lib in favor of rapidjson here

--- a/inexor/master/CMakeLists.txt
+++ b/inexor/master/CMakeLists.txt
@@ -25,3 +25,4 @@ config_net(${MASTER_BINARY})
 config_rpc(${MASTER_BINARY})
 config_util(${MASTER_BINARY})
 config_crashreporter(${MASTER_BINARY})
+config_filesystem(${MASTER_BINARY})
