add ctftkpenalty to server-init.cfg

--- a/server-init.cfg
+++ b/server-init.cfg
@@ -79,6 +79,10 @@ spectatemodifiedmap 1
 // when 0 allows any votes (default)
 // lockmaprotation 0
 
+// whether or not the teamkiller of a flagcarrier is able to pick up the flag
+// when 1 the teamkiller wont be able to pick up the flag (default), set 0 to allow him.
+// ctftkpenalty 0
+
 ffamaps = [
 cartel
 ]
