Logging: migrate chat messages to new log syntax

--- a/inexor_logging.conf
+++ b/inexor_logging.conf
@@ -24,3 +24,11 @@
    PERFORMANCE_TRACKING =  false
    MAX_LOG_FILE_SIZE    =  2097152                          ## 2MB - Comment starts with two hashes (##)
    LOG_FLUSH_THRESHOLD  =  25                               ## Flush after every 25 logs
+
+-- chat
+* GLOBAL:
+   FORMAT               = "%msg"
+   FILENAME             = "inexor.log"
+
+-- editing
+* GLOBAL
