node: fix node, but disable automatic startup with inexor (for win)
we can uncomment it as soon as its in use.
(win developers need to call tool/node_windows_update_npm.bat by hand atm, before they can start with inexor_node_windows.bat)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,8 @@ init:
 
 # scripts that run after cloning repository
 install:
-  - cmd: cd C:\projects\inexor-game
+  - cmd: set "MAIN_FOLDER=C:\projects\inexor-game"
+  - cmd: cd %MAIN_FOLDER%
   - cmd: git submodule update --init
 
 # scripts to run before build
